--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>COFFEE</title>
+    <link rel="stylesheet" type="text/css" href="./css/coffee.css">
+  </head>
+
+  <body>
+    <h1 class='section'>COFFEE</h1>
+  </body>
+</html>
